--- a/src/pages/Cardpage.css
+++ b/src/pages/Cardpage.css
@@ -8,5 +8,5 @@
   border-radius: 25px;
   text-align: center;
   padding-top: 10px;
-  box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.198);
+  /* box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.198); */
 }
