--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,12 @@ body {
   font-family: Vazir;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-image: url("../src/assets/images/background.jpg");
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;}
+  
 @font-face {
   font-family: "Vazir";
   src: local("Vazir"), url(./assets/fonts/Vazir-Black.ttf) format("truetype");
