--- a/src/component/Footer/footer.css
+++ b/src/component/Footer/footer.css
@@ -7,6 +7,8 @@
     background-color: #202a4455;
     border-radius: 20px 20px 0px 0px;
     height: 500px;
+    font-size: 20px;
+
 }
 .footer h1{
     margin: 10px auto ;
