--- a/src/pages/Homepage/homepage.css
+++ b/src/pages/Homepage/homepage.css
@@ -8,6 +8,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: justify;
+    direction: rtl;
     margin: auto;
     padding: 40px;
     backdrop-filter: blur(20px);
@@ -16,6 +18,9 @@
     margin: 50px;
     border-radius: 30px;
     /* background-color: red; */
+}
+.container p{
+    font-size: 20px;
 }
 .container h2{
     padding: 10px;
