--- a/src/containers/Header/Menuitems/Menuitem/Menuitem.css
+++ b/src/containers/Header/Menuitems/Menuitem/Menuitem.css
@@ -7,7 +7,7 @@
   margin: 5px;
 }
 .menuitem a {
-  color: black;
+  color: white;
   text-decoration: none;
   /* height: 100%; */
   padding: 10px;
