--- a/src/containers/Header/Toolbar/Toolbar.css
+++ b/src/containers/Header/Toolbar/Toolbar.css
@@ -1,8 +1,8 @@
 .Toolbar {
   height: 60px;
   width: 100%;
-  background-color: rgb(255, 255, 255);
-  border-bottom: 1px solid rgb(226, 226, 226);
+  backdrop-filter: blur(20px);
+    background-color:#202a448c ;
   position: fixed;
   left: 0;
   top: 0;
@@ -13,12 +13,10 @@
   box-sizing: border-box;
   z-index: 90;
   direction: rtl;
-  box-shadow: 0 2px 3px #ccc;
 }
 .Toolbar nav {
   height: 100%;
-  width: 95%;
-  background-color: white;
+  width: 100%;
 }
 /* @media (max-width: 499px) {
   .Toolbar {
