--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 .App {
+  font-family: Vazir-Black;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   text-align: center;
   display: flex;
   direction: rtl;
   flex-flow: row;
   align-items: center;
   background-color: red;
+}
+
+@font-face {
+  font-family: "Vazir-Black";
+  src: local("Vazir-Black"), url("./assets/fonts/Vazir-Black.ttf");
 }
