--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,15 +7,23 @@
   text-align: center;
 }
 .header div {
-  width: 50%;
+  width: 60%;
   margin: auto;
   padding-top: 50px;
 }
 .header h1 {
-  text-shadow: 1px 1px 0 rgb(204, 204, 204), 2px 2px 0 rgb(153, 153, 153), 3px 3px 0 rgb(102, 102, 102), 4px 4px 0 rgb(51, 51, 51), 5px 5px 1px rgba(0, 0, 0, 0);
-  -webkit-text-shadow: 1px 1px 0 rgb(204, 204, 204), 2px 2px 0 rgb(153, 153, 153), 3px 3px 0 rgb(102, 102, 102), 4px 4px 0 rgb(51, 51, 51), 5px 5px 1px rgba(0, 0, 0, 0);
-  -moz-text-shadow: 1px 1px 0 rgb(204, 204, 204), 2px 2px 0 rgb(153, 153, 153), 3px 3px 0 rgb(102, 102, 102), 4px 4px 0 rgb(51, 51, 51), 5px 5px 1px rgba(0, 0, 0, 0);
-  color: #ffffff;
-  font-size: 81px;
-  text-shadow: 4px 4px 0px #a3a3a3;
+  margin: auto;
+  /* transform: translate(-50%, -50%); */
+  font-size: 50px;
+  /* letter-spacing: 0.1em; */
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 3px;
+  -webkit-text-stroke-color: white;
+  text-shadow: 3px 1px #ff1f8f, 20px 20px #000000;
+}
+.header p {
+  color: white;
+  text-align: center;
+  font-size: 20px;
+  padding-top: 50px;
 }
