--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,25 +1,30 @@
 .intro {
+  padding-top: 10px;
   width: 60%;
   margin: 10px auto;
   display: flex;
 }
 .intro div {
-  margin-left: 90px;
-  width: 30%;
+  text-align: center;
+  padding: 10px;
+  margin: auto;
 }
 .intro img {
+  z-index: 100;
   height: 300px;
   margin: 10px;
+  border-radius: 30px;
 }
 .introleft {
+  padding-top: 10px;
   width: 60%;
   margin: 10px auto;
   display: flex;
   flex-direction: row-reverse;
 }
 .introleft div {
-  margin-right: 80px;
-  width: 40%;
+  text-align: center;
+  padding: 10px;
 }
 h1 {
   background: #ff0000;
@@ -28,7 +33,28 @@ h1 {
   background: linear-gradient(to left, #ff0000 41%, #000000 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+  font-size: 35px;
 }
 p {
   text-align: justify;
+  direction: rtl;
+}
+.intro span {
+  left: 50%;
+  position: absolute;
+  font-size: 60px;
+  transform: translate(-2%, -3%);
+  /* font-size: 120px; */
+  /* letter-spacing: 0.1em; */
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: rgb(0, 0, 0), 0, 0);
+  text-shadow: 8px 8px #ff1f8f, 20px 20px #ffffff;
+}
+.introleft span {
+  left: 46%;
+  position: absolute;
+  font-size: 60px;
+  transform: translate(-1%, -30%);
+
 }
