--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -2,9 +2,12 @@
   width: 50%;
   margin: 50px auto;
   border-radius: 10px;
-  border: 1px solid darkslategrey;
+  /* border: 1px solid darkslategrey; */
   padding: 10px;
   direction: rtl;
+  -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
 }
 .order td {
   /* background-color: red; */
