--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   /* position: fixed; */
   /* width: 100%; */
   height: 90vh;
-  background-image: url("../../assets/images/background.jpg");
+  /* background-image: url("../../assets/images/background.jpg"); */
   background-size: cover;
   text-align: center;
 }
@@ -11,7 +11,7 @@
   margin: auto;
   padding-top: 50px;
 }
-.header h1 {
+.header h2 {
   margin: auto;
   /* transform: translate(-50%, -50%); */
   font-size: 50px;
@@ -19,7 +19,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 3px;
   -webkit-text-stroke-color: white;
-  text-shadow: 3px 1px #ff1f8f, 20px 20px #000000;
+  /* text-shadow: 3px 1px #ff1f8f, 20px 20px #000000; */
 }
 .header p {
   color: white;
