--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -1,23 +1,28 @@
 .intro {
   padding-top: 10px;
-  width: 60%;
+  width: 80%;
   margin: 10px auto;
   display: flex;
+  background-color: rgba(255, 255, 255, 0.335);
+  backdrop-filter: blur(30px);
+  border-radius: 20px;
+  color: black;
 }
 .intro div {
+  font-size: 22px;
   text-align: center;
   padding: 10px;
   margin: auto;
 }
 .intro img {
   z-index: 100;
-  height: 300px;
+  height: 400px;
   margin: 10px;
   border-radius: 30px;
 }
 .introleft {
   padding-top: 10px;
-  width: 60%;
+  width: 80%;
   margin: 10px auto;
   display: flex;
   flex-direction: row-reverse;
@@ -27,12 +32,12 @@
   padding: 10px;
 }
 h1 {
-  background: #ff0000;
+  /* background: #ff0000;
   background: -webkit-linear-gradient(to left, #ff0000 41%, #000000 100%);
   background: -moz-linear-gradient(to left, #ff0000 41%, #000000 100%);
   background: linear-gradient(to left, #ff0000 41%, #000000 100%);
   -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  -webkit-text-fill-color: transparent; */
   font-size: 35px;
 }
 p {
@@ -43,18 +48,14 @@ p {
   left: 50%;
   position: absolute;
   font-size: 60px;
-  transform: translate(-2%, -3%);
-  /* font-size: 120px; */
-  /* letter-spacing: 0.1em; */
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 1px;
-  -webkit-text-stroke-color: rgb(0, 0, 0), 0, 0);
-  text-shadow: 8px 8px #ff1f8f, 20px 20px #ffffff;
+  -webkit-text-stroke-color: #ff1f8f;
+  /* text-shadow: 8px 8px #ff1f8f, 20px 20px #ffffff; */
 }
 .introleft span {
   left: 46%;
   position: absolute;
   font-size: 60px;
   transform: translate(-1%, -30%);
-
 }
