--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -1,8 +1,9 @@
 .order {
-  width: 50%;
+  background-color: white;
+  width: 60%;
   margin: 50px auto;
   border-radius: 10px;
-  /* border: 1px solid darkslategrey; */
+  border: 1px solid darkslategrey;
   padding: 10px;
   direction: rtl;
   -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
