--- a/src/pages/Customer.css
+++ b/src/pages/Customer.css
@@ -1,19 +1,17 @@
 .Search {
-  padding-top: 10px;
-  /* background-color: red; */
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
-  width: 90%;
+  height: 650px;
   margin: 30px auto;
-  background-color: rgba(255, 255, 255, 0.335);
-  backdrop-filter: blur(30px);
+  padding-top: 20px;
+  background-color: rgba(255, 255, 255, 0);
+  backdrop-filter: blur(20px);
   border-radius: 20px;
   color: black;
 }
 .errorMessage {
-  /* background-color: red; */
+  background-color: white;
   margin-top: 30px;
   padding: 20px;
   border-radius: 10px;
