--- a/src/pages/Customer.css
+++ b/src/pages/Customer.css
@@ -1,18 +1,26 @@
 .Search {
   display: flex;
+  width: 50%;
   align-items: center;
   flex-direction: column;
-  height: 650px;
   margin: 30px auto;
-  padding-top: 20px;
-  background-color: rgba(255, 255, 255, 0);
-  backdrop-filter: blur(20px);
+  padding: 20px;
+  background-color: rgb(255, 255, 255);
+  /* backdrop-filter: blur(100px); */
   border-radius: 20px;
   color: black;
 }
 .errorMessage {
   background-color: white;
-  margin-top: 30px;
+  margin: 30px auto;
+  width: 20%;
   padding: 20px;
+  text-align: center;
   border-radius: 10px;
+}
+.back {
+  background-color: rgba(0, 0, 0, 0);
+  backdrop-filter: blur(30px);
+  padding: 10px;
+  height: 700px;
 }
