--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   /* position: fixed; */
   /* width: 100%; */
   height: 90vh;
-  /* background-image: url("../../assets/images/background.jpg"); */
+  background-image: url("../../assets/images/wallpaper.jpg");
   background-size: cover;
   text-align: center;
 }
