--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -8,13 +8,15 @@
   border-radius: 20px;
   color: black;
 }
-.intro div {
+.intro div,
+.introleft div {
   font-size: 22px;
   text-align: center;
   padding: 10px;
   margin: auto;
 }
-.intro img {
+.intro img,
+.introleft img {
   z-index: 100;
   height: 400px;
   margin: 10px;
@@ -25,12 +27,13 @@
   width: 80%;
   margin: 10px auto;
   display: flex;
+  background-color: rgba(255, 255, 255, 0.335);
+  backdrop-filter: blur(30px);
+  border-radius: 20px;
+  color: black;
   flex-direction: row-reverse;
 }
-.introleft div {
-  text-align: center;
-  padding: 10px;
-}
+
 h1 {
   /* background: #ff0000;
   background: -webkit-linear-gradient(to left, #ff0000 41%, #000000 100%);
@@ -44,18 +47,28 @@ p {
   text-align: justify;
   direction: rtl;
 }
-.intro span {
+.intro span,
+.introleft span {
   left: 50%;
   position: absolute;
   font-size: 60px;
   -webkit-text-fill-color: transparent;
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: #ff1f8f;
-  /* text-shadow: 8px 8px #ff1f8f, 20px 20px #ffffff; */
 }
 .introleft span {
   left: 46%;
   position: absolute;
   font-size: 60px;
   transform: translate(-1%, -30%);
+}
+@media (max-width: 1304px) {
+  .intro,
+  .introleft {
+    flex-direction: column;
+  }
+  .intro img,
+  .introleft img {
+    margin: 10px;
+  }
 }
