--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,7 +1,11 @@
 .search {
   /* background-color: red; */
+  /* width: 100%; */
   height: 90px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+.search input {
+  background-color: red;
 }
