--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,11 @@ body {
   font-family: Vazir;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-image: url("../src/assets/images/backgrounddark.jpg");
+  /* background-image: url("../src/assets/images/backgrounddark.jpg");
   background-attachment: fixed;
-  background-position: center;
+  background-position: bottom;
   background-repeat: no-repeat;
-  background-size: cover;
+  background-size: cover; */
 }
 
 @font-face {
