--- a/src/pages/Customer.css
+++ b/src/pages/Customer.css
@@ -20,7 +20,9 @@
   border-radius: 10px;
 }
 .back {
-  background-color: rgba(255, 255, 255, 0);
+  background-image: url("../assets/images/backgrounddark.jpg");
+
+  /* background-color: rgba(255, 255, 255, 0); */
   backdrop-filter: blur(10px);
   padding: 10px;
   height: 700px;
