--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -29,11 +29,11 @@
   margin: 35px auto;
   display: flex;
   /* border-radius: 20px; */
-  color: black;
+  /* color: black;
   flex-direction: row-reverse;
   -webkit-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75); */
 }
 
 h1 {
