--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,29 +1,9 @@
-.header {
-  /* position: fixed; */
-  /* width: 100%; */
-  height: 90vh;
-  background-image: url("../../assets/images/wallpaper.jpg");
-  background-size: cover;
-  text-align: center;
-}
-.header div {
-  width: 60%;
-  margin: auto;
-  padding-top: 50px;
-}
-.header h2 {
-  margin: auto;
-  /* transform: translate(-50%, -50%); */
-  font-size: 50px;
-  /* letter-spacing: 0.1em; */
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 3px;
-  -webkit-text-stroke-color: white;
-  /* text-shadow: 3px 1px #ff1f8f, 20px 20px #000000; */
+.header img {
+  width: 100%;
 }
 .header p {
-  color: white;
+  font-size: 25px;
+  margin: 20px auto;
+  width: 80%;
   text-align: center;
-  font-size: 20px;
-  padding-top: 50px;
 }
