--- a/src/App.css
+++ b/src/App.css
@@ -21,12 +21,16 @@
   z-index: 100;
 }
 .IMG img {
-  width: 10%;
+  width: 13%;
   cursor: pointer;
-  color: black;
+  border-radius: 50%;
+  /* padding: 10px; */
+  -webkit-box-shadow: 0px 0px 13px -4px rgba(68, 0, 255, 0.75);
+  -moz-box-shadow: 0px 0px 13px -4px rgba(68, 0, 255, 0.75);
+  box-shadow: 0px 0px 13px -4px rgba(68, 0, 255, 0.75);
 }
 .IMG img:hover {
-  width: 13%;
+  width: 15%;
 }
 .extraClass {
   font-size: 15px !important;
