--- a/src/components/Intro/Intro.css
+++ b/src/components/Intro/Intro.css
@@ -3,6 +3,7 @@
   width: 80%;
   margin: 10px auto;
   display: flex;
+  background-color: white;
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
@@ -28,6 +29,8 @@
   margin: 35px auto;
   display: flex;
   flex-direction: row-reverse;
+  background-color: white;
+
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
@@ -37,13 +40,6 @@
 h1 {
   color: black;
   font-size: 30px;
-  /* background: #ff0000;
-  background: -webkit-linear-gradient(to left, #ff0000 41%, #000000 100%);
-  background: -moz-linear-gradient(to left, #ff0000 41%, #000000 100%);
-  background: linear-gradient(to left, #ff0000 41%, #000000 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  font-size: 35px; */
 }
 p {
   text-align: justify;
