--- a/src/components/Order/Order.css
+++ b/src/components/Order/Order.css
@@ -9,8 +9,8 @@
   -webkit-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
   box-shadow: 0px 0px 13px -4px rgba(0, 0, 0, 0.75);
+  white-space: pre-wrap;
 }
 .order td {
-  /* background-color: red; */
   width: 80%;
 }
