--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,46 +1,21 @@
 .footer {
+  color: black;
   width: auto;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  padding: 50px;
+  background-image: url("../../assets/images/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.text {
   color: white;
-  background-color: #000000;
-  /* backdrop-filter: blur(50px); */
-  border-radius: 20px 20px 0px 0px;
-  height: 600px;
-  font-size: 20px;
-}
-.footer h1 {
-  margin: 10px auto;
-}
-.grid div {
-  background-color: rgba(255, 255, 255, 0.157);
-  border-radius: 30px;
-  padding-top: 5px;
-  margin: 20px;
-  height: 300px;
-  text-align: center;
+  height: 400px;
+  /* border: 10px solid red; */
+  border-radius: 10px;
+  backdrop-filter: blur(20px);
+  background-color: rgba(0, 0, 0, 0.452);
   display: flex;
   flex-direction: column;
 }
-.imggrid {
-  border-radius: 30px;
-  height: 300px;
-  display: flex;
-  flex-direction: row;
-}
-.img {
-  display: flex;
-  /* flex-direction: row; */
-  margin: auto;
-}
-.img img {
-  width: 120px;
-  height: auto;
-  margin: 5px;
-}
-.img img:hover {
-  transform: scale(1.1);
+img {
+  background-color: white;
+  border-radius: 10px;
 }
