--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -7,15 +7,16 @@
 }
 .text {
   color: white;
-  height: 400px;
-  /* border: 10px solid red; */
+  /* height: 400px; */
   border-radius: 10px;
   backdrop-filter: blur(20px);
   background-color: rgba(0, 0, 0, 0.452);
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
-img {
+.text img {
   background-color: white;
-  border-radius: 10px;
+  padding: 5px;
+  border-radius: 30px;
 }
