--- a/src/components/TextArea/Textarea.css
+++ b/src/components/TextArea/Textarea.css
@@ -1,11 +1,11 @@
 .textarea {
   padding: 20px 0px;
-  width: 40%;
-  margin: 30px auto;
+  width: 50%;
+  margin: 50px auto;
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: white;
+  background-color: rgba(192, 192, 192, 0.644);
   border-radius: 20px;
   -webkit-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: 0px 0px 18px -5px rgba(0, 0, 0, 0.75);
@@ -30,5 +30,10 @@
   text-align: center;
 }
 .setError {
-  margin-top: 10px;
+  margin-top: 20px;
+}
+@media (max-width: 1304px) {
+  .textarea input {
+    width: 40%;
+  }
 }
